Libera cadastro de produtor e dá ao admin controle da equipe.
